--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,13 @@ uuid = "69a5ce3b-64fb-4f22-ae69-36dd4416af2a"
 authors = ["Benedikt Ehinger"]
 version = "0.1.0"
 
+[deps]
+AlgebraOfGraphics = "cbdf2221-f076-402e-a563-3d30da359d67"
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
+StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
+Unfold = "181c99d8-e21b-4ff3-b70b-c233eddec679"
+
 [compat]
 julia = "1.5"
 
