--- a/Project.toml
+++ b/Project.toml
@@ -5,16 +5,21 @@ version = "0.1.1"
 
 [deps]
 AlgebraOfGraphics = "cbdf2221-f076-402e-a563-3d30da359d67"
+ColorSchemes = "35d6a980-a343-548e-a6ea-1d62b119f2f4"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+Dierckx = "39dd38d3-220a-591b-8e3c-4c3a8c710a94"
+GeometryTypes = "4d00f742-c7ba-57c2-abde-4428a4b178cb"
 Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
+TimerOutputs = "a759f4b9-e2f1-59dc-863e-4aeb61b1ea8f"
 Unfold = "181c99d8-e21b-4ff3-b70b-c233eddec679"
 
 [compat]
+AlgebraOfGraphics = "0.5"
+DataFrames = "1"
 Makie = "0.15"
 StatsBase = "0.33"
-DataFrames = "1"
-AlgebraOfGraphics = "0.5"
 julia = "1.5"
 
 [extras]
