--- a/Project.toml
+++ b/Project.toml
@@ -11,10 +11,11 @@ StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 Unfold = "181c99d8-e21b-4ff3-b70b-c233eddec679"
 
 [compat]
+AlgebraOfGraphics = "0.5"
+DataFrames = "1"
 Makie = "0.15"
 StatsBase = "0.33"
-DataFrames = "1"
-AlgebraOfGraphics = "0.5"
+Unfold = "0.3"
 julia = "1.5"
 
 [extras]
