--- a/Project.toml
+++ b/Project.toml
@@ -16,7 +16,7 @@ StatsBase = "0.33"
 DataFrames = "1"
 AlgebraOfGraphics = "0.5"
 julia = "1.5"
-Unfold= 0.3
+Unfold= "0.3"
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
