--- a/Project.toml
+++ b/Project.toml
@@ -14,7 +14,7 @@ Unfold = "181c99d8-e21b-4ff3-b70b-c233eddec679"
 [compat]
 AlgebraOfGraphics = "0.6"
 DataFrames = "1"
-Makie = "0.15"
+Makie = "0.15, 0.16"
 Unfold = "0.3"
 julia = "1"
 
