--- a/Project.toml
+++ b/Project.toml
@@ -10,16 +10,10 @@ CategoricalArrays = "324d7699-5711-5eae-9e2f-1d82baa6b597"
 ColorSchemes = "35d6a980-a343-548e-a6ea-1d62b119f2f4"
 Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
-Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 GeometryBasics = "5c1252a2-5f33-56bf-86c9-59e7332b4326"
-Glob = "c27321d9-0574-5035-807b-f59d2c89b15c"
 ImageFiltering = "6a3955dd-da59-5b1f-98d4-e7296123deb5"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
-Literate = "98b081ad-f1c9-55d3-8b20-4c87d4299306"
 Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
-Pipe = "b98c9c47-44ae-5843-9183-064241ee97a0"
-Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
-PyMNE = "6c5003b2-cbe8-491c-a0d1-70088e6a0fd6"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 TopoPlots = "2bdbdf9c-dbd8-403f-947b-1a4e0dd41a7a"
@@ -27,8 +21,15 @@ Unfold = "181c99d8-e21b-4ff3-b70b-c233eddec679"
 
 [compat]
 AlgebraOfGraphics = "0.6"
+CairoMakie = "0.9"
+CategoricalArrays = "0.10"
+ColorSchemes = "3"
+Colors = "0.12"
 DataFrames = "1"
+GeometryBasics = "0.4"
+ImageFiltering = "0.7"
 Makie = "0.17,0.18"
+TopoPlots = "0.1"
 Unfold = "0.3"
 julia = "1"
 
