--- a/Project.toml
+++ b/Project.toml
@@ -13,6 +13,7 @@ Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 GeometryBasics = "5c1252a2-5f33-56bf-86c9-59e7332b4326"
+GridLayoutBase = "3955a311-db13-416c-9275-1d80ed98e5e9"
 ImageFiltering = "6a3955dd-da59-5b1f-98d4-e7296123deb5"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
@@ -30,6 +31,7 @@ ColorSchemes = "3"
 Colors = "0.12"
 DataFrames = "1"
 GeometryBasics = "0.4"
+GridLayoutBase = "0.9"
 ImageFiltering = "0.7"
 Makie = "0.17,0.18"
 Unfold = "0.3"
