--- a/Project.toml
+++ b/Project.toml
@@ -28,12 +28,16 @@ AlgebraOfGraphics = "0.6"
 CairoMakie = "0.9"
 CategoricalArrays = "0.10"
 ColorSchemes = "3"
+ColorTypes = "0.11"
 Colors = "0.12"
 DataFrames = "1"
+DataStructures = "0.18"
 GeometryBasics = "0.4"
 GridLayoutBase = "0.9"
 ImageFiltering = "0.7"
 Makie = "0.17,0.18"
+SciPy = ""0.1"
+TopoPlots = "0.1"
 Unfold = "0.3"
 julia = "1"
 
