--- a/Project.toml
+++ b/Project.toml
@@ -36,7 +36,7 @@ GeometryBasics = "0.4"
 GridLayoutBase = "0.9"
 ImageFiltering = "0.7"
 Makie = "0.17,0.18"
-SciPy = ""0.1"
+SciPy = "0.1"
 TopoPlots = "0.1"
 Unfold = "0.3"
 julia = "1"
