--- a/Project.toml
+++ b/Project.toml
@@ -1,6 +1,6 @@
 name = "UnfoldMakie"
 uuid = "69a5ce3b-64fb-4f22-ae69-36dd4416af2a"
-authors = ["Benedikt Ehinger", "Daniel Baumgartner", "Sören Döring", "Niklas Gärtner"]
+authors = ["Benedikt Ehinger", "Daniel Baumgartner", "Sören Döring", "Niklas Gärtner", "Vladimir Mikheev"]
 version = "0.2.3"
 
 [deps]
@@ -35,7 +35,7 @@ DataStructures = "0.18"
 GeometryBasics = "0.4"
 GridLayoutBase = "0.9"
 ImageFiltering = "0.7"
-Makie = "0.17,0.18"
+Makie = "0.17,0.18,0.19"
 SciPy = "0.1"
 TopoPlots = "0.1"
 Unfold = "0.3"
