--- a/Project.toml
+++ b/Project.toml
@@ -38,7 +38,7 @@ ImageFiltering = "0.7"
 Makie = "0.17,0.18,0.19"
 SciPy = "0.1"
 TopoPlots = "0.1"
-Unfold = "0.3"
+Unfold = "0.3, 0.4"
 julia = "1"
 
 [extras]
