--- a/Project.toml
+++ b/Project.toml
@@ -5,7 +5,6 @@ version = "0.2.7"
 
 [deps]
 AlgebraOfGraphics = "cbdf2221-f076-402e-a563-3d30da359d67"
-CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
 CategoricalArrays = "324d7699-5711-5eae-9e2f-1d82baa6b597"
 ColorSchemes = "35d6a980-a343-548e-a6ea-1d62b119f2f4"
 ColorTypes = "3da002f7-5984-5a60-b8a6-cbb66c0b333f"
@@ -17,7 +16,7 @@ GridLayoutBase = "3955a311-db13-416c-9275-1d80ed98e5e9"
 ImageFiltering = "6a3955dd-da59-5b1f-98d4-e7296123deb5"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
-SciPy = "ebc72ef8-9537-4fb0-b64e-ac76025fed2d"
+Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 TopoPlots = "2bdbdf9c-dbd8-403f-947b-1a4e0dd41a7a"
@@ -25,7 +24,6 @@ Unfold = "181c99d8-e21b-4ff3-b70b-c233eddec679"
 
 [compat]
 AlgebraOfGraphics = "0.6"
-CairoMakie = "0.9,0.10"
 CategoricalArrays = "0.10"
 ColorSchemes = "3"
 ColorTypes = "0.11"
@@ -36,7 +34,6 @@ GeometryBasics = "0.4"
 GridLayoutBase = "0.9"
 ImageFiltering = "0.7"
 Makie = "0.17,0.18,0.19"
-SciPy = "0.1"
 TopoPlots = "0.1"
 Unfold = "0.3, 0.4"
 julia = "1"
