--- a/Project.toml
+++ b/Project.toml
@@ -16,6 +16,7 @@ GridLayoutBase = "3955a311-db13-416c-9275-1d80ed98e5e9"
 ImageFiltering = "6a3955dd-da59-5b1f-98d4-e7296123deb5"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
+MakieCore = "20f20a25-4f0e-4fdf-b5d1-57303727442b"
 Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
