--- a/Project.toml
+++ b/Project.toml
@@ -34,7 +34,7 @@ GridLayoutBase = "0.9"
 ImageFiltering = "0.7"
 Makie = "0.17,0.18,0.19"
 TopoPlots = "0.1"
-Unfold = "0.3, 0.4"
+Unfold = "0.3, 0.4, 0.5"
 julia = "1"
 
 [extras]
