--- a/test/Project.toml
+++ b/test/Project.toml
@@ -4,3 +4,4 @@ DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 GeometryBasics = "5c1252a2-5f33-56bf-86c9-59e7332b4326"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 TopoPlots = "2bdbdf9c-dbd8-403f-947b-1a4e0dd41a7a"
+UnfoldSim = "ed8ae6d2-84d3-44c6-ab46-0baf21700804"
