--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,6 @@
 name = "UnfoldMakie"
 uuid = "69a5ce3b-64fb-4f22-ae69-36dd4416af2a"
-
-authors = ["Benedikt Ehinger","Vladimir Mikheev", "Daniel Baumgartner", "Sören Döring", "Niklas Gärtner"]
+authors = ["Benedikt Ehinger", "Vladimir Mikheev", "Daniel Baumgartner", "Sören Döring", "Niklas Gärtner"]
 version = "0.3.5"
 
 [deps]
@@ -44,6 +43,7 @@ ImageFiltering = "0.7"
 Makie = "0.17,0.18,0.19"
 PyMNE = "0.2"
 StaticArray = "1"
+StaticArrays = "1"
 TopoPlots = "0.1"
 Unfold = "0.3, 0.4, 0.5, 0.6"
 julia = "1"
