--- a/Project.toml
+++ b/Project.toml
@@ -43,7 +43,7 @@ GridLayoutBase = "0.9"
 ImageFiltering = "0.7"
 Makie = "0.17,0.18,0.19"
 PyMNE = "0.2"
-StaticArray = "1"
+StaticArrays = "1"
 TopoPlots = "0.1"
 Unfold = "0.3, 0.4, 0.5, 0.6"
 julia = "1"
