CompatHelper: add new compat entry for Statistics at version 1, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -46,6 +46,7 @@ ImageFiltering = "0.7"
 Makie = "0.17,0.18,0.19"
 PyMNE = "0.2"
 StaticArrays = "1"
+Statistics = "1"
 TopoPlots = "0.1"
 Unfold = "0.3, 0.4, 0.5, 0.6"
 julia = "1"
