--- a/Project.toml
+++ b/Project.toml
@@ -43,8 +43,10 @@ DocStringExtensions = "0.9"
 GeometryBasics = "0.4"
 GridLayoutBase = "0.9"
 ImageFiltering = "0.7"
+LinearAlgebra = "1"
 Makie = "0.17,0.18,0.19"
 PyMNE = "0.2"
+SparseArrays = "1"
 StaticArrays = "1"
 Statistics = "1"
 TopoPlots = "0.1"
