--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "UnfoldMakie"
 uuid = "69a5ce3b-64fb-4f22-ae69-36dd4416af2a"
-authors = ["Benedikt Ehinger", "Vladimir Mikheev", "Daniel Baumgartner", "Sören Döring", "Niklas Gärtner"]
-version = "0.3.5"
+authors = ["Vladimir Mikheev", "Daniel Baumgartner", "Sören Döring", "Niklas Gärtner","Furkan Lokman","Benedikt Ehinger"]
+version = "0.3.6"
 
 [deps]
 AlgebraOfGraphics = "cbdf2221-f076-402e-a563-3d30da359d67"
@@ -12,6 +12,7 @@ Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
 CoordinateTransformations = "150eb455-5306-5404-9cee-2592286d6298"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
+DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
 GeometryBasics = "5c1252a2-5f33-56bf-86c9-59e7332b4326"
 GridLayoutBase = "3955a311-db13-416c-9275-1d80ed98e5e9"
 ImageFiltering = "6a3955dd-da59-5b1f-98d4-e7296123deb5"
@@ -38,12 +39,16 @@ Colors = "0.12"
 CoordinateTransformations = "0.6"
 DataFrames = "1"
 DataStructures = "0.18"
+DocStringExtensions = "0.9"
 GeometryBasics = "0.4"
 GridLayoutBase = "0.9"
 ImageFiltering = "0.7"
-Makie = "0.17, 0.18, 0.19.12"
+LinearAlgebra = "1"
+Makie = "0.17, 0.18, 0.19"
 PyMNE = "0.2"
+SparseArrays = "1"
 StaticArrays = "1"
+Statistics = "1"
 TopoPlots = "0.1"
 Unfold = "0.3, 0.4, 0.5, 0.6"
 julia = "1"
