--- a/Project.toml
+++ b/Project.toml
@@ -44,7 +44,7 @@ GeometryBasics = "0.4"
 GridLayoutBase = "0.9"
 ImageFiltering = "0.7"
 LinearAlgebra = "1"
-Makie = "0.17,0.18,0.19"
+Makie = "0.17, 0.18, 0.19"
 PyMNE = "0.2"
 SparseArrays = "1"
 StaticArrays = "1"
