--- a/Project.toml
+++ b/Project.toml
@@ -39,7 +39,7 @@ CoordinateTransformations = "0.6"
 DataFrames = "1"
 DataStructures = "0.18"
 GeometryBasics = "0.4"
-GridLayoutBase = "0.9"
+GridLayoutBase = "0.9, 0.10"
 ImageFiltering = "0.7"
 Makie = "0.17,0.18,0.19,0.20"
 PyMNE = "0.2"
