--- a/Project.toml
+++ b/Project.toml
@@ -43,6 +43,7 @@ DataStructures = "0.18"
 DocStringExtensions = "0.9"
 GeometryBasics = "0.4"
 GridLayoutBase = "0.9, 0.10"
+Interpolations = "0.14,0.15"
 ImageFiltering = "0.7"
 LinearAlgebra = "1"
 Makie = "0.17, 0.18, 0.19, 0.20"
