--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -19,3 +19,4 @@ Unfold = "181c99d8-e21b-4ff3-b70b-c233eddec679"
 UnfoldMakie = "69a5ce3b-64fb-4f22-ae69-36dd4416af2a"
 UnfoldSim = "ed8ae6d2-84d3-44c6-ab46-0baf21700804"
 XML2_jll = "02c8fc9c-b97f-50b9-bbe4-9be30ff0a78a"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
