--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -1,8 +1,25 @@
-name: Format suggestions
-on:
-  pull_request:
-jobs:
-  code-style:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: julia-actions/julia-format@v2.0.0
+name: 'Format suggestion with JuliaFormatter.jl'
+description: "Formats your Julia files and suggest changes"
+runs:
+  using: "composite"
+  steps:
+    - uses: actions/checkout@v4
+    - uses: julia-actions/setup-julia@v1
+    - uses: julia-actions/cache@v1
+    - name: 'Install JuliaFormatter'
+      run: |
+        julia -e '
+          using Pkg
+          Pkg.add("JuliaFormatter")'
+      shell: bash
+    - name: 'Format'
+      run: |
+        julia -e '
+          using JuliaFormatter
+          format(".", join_lines_based_on_source = true)'
+      shell: bash
+    - name: 'Suggest'
+      uses: reviewdog/action-suggester@v1
+      with:
+        tool_name: JuliaFormatter
+        fail_on_error: true
