--- a/test/Project.toml
+++ b/test/Project.toml
@@ -8,3 +8,4 @@ TopoPlots = "2bdbdf9c-dbd8-403f-947b-1a4e0dd41a7a"
 Unfold = "181c99d8-e21b-4ff3-b70b-c233eddec679"
 UnfoldSim = "ed8ae6d2-84d3-44c6-ab46-0baf21700804"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+AlgebraOfGraphics = "cbdf2221-f076-402e-a563-3d30da359d67"
