--- a/Project.toml
+++ b/Project.toml
@@ -42,9 +42,9 @@ DataFrames = "1"
 DataStructures = "0.18"
 DocStringExtensions = "0.9"
 GeometryBasics = "0.4"
-GridLayoutBase = "0.9, 0.10"
-Interpolations = "0.14,0.15"
+GridLayoutBase = "0.9, 0.10, 0.11"
 ImageFiltering = "0.7"
+Interpolations = "0.14,0.15"
 LinearAlgebra = "1"
 Makie = "0.17, 0.18, 0.19, 0.20"
 PyMNE = "0.2"
