--- a/Project.toml
+++ b/Project.toml
@@ -48,6 +48,7 @@ ImageFiltering = "0.7"
 Interpolations = "0.14,0.15"
 LinearAlgebra = "1"
 Makie = "0.17, 0.18, 0.19, 0.20, 0.21"
+MakieThemes = "0.1"
 PyMNE = "0.2"
 SparseArrays = "1"
 StaticArrays = "1"
