--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -14,6 +14,7 @@ Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
 Glob = "c27321d9-0574-5035-807b-f59d2c89b15c"
 Literate = "98b081ad-f1c9-55d3-8b20-4c87d4299306"
+MATLAB = "10e44e05-a98a-55b3-a45b-ba969058deb6"
 MakieThemes = "e296ed71-da82-5faf-88ab-0034a9761098"
 PyMNE = "6c5003b2-cbe8-491c-a0d1-70088e6a0fd6"
 PythonPlot = "274fc56d-3b97-40fa-a1cd-1b4a50311bf9"
