--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -14,6 +14,7 @@ Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 Glob = "c27321d9-0574-5035-807b-f59d2c89b15c"
 Literate = "98b081ad-f1c9-55d3-8b20-4c87d4299306"
 MakieThemes = "e296ed71-da82-5faf-88ab-0034a9761098"
+Observables = "510215fc-4207-5dde-b226-833fc4488ee2"
 PyMNE = "6c5003b2-cbe8-491c-a0d1-70088e6a0fd6"
 PythonPlot = "274fc56d-3b97-40fa-a1cd-1b4a50311bf9"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
