--- a/Project.toml
+++ b/Project.toml
@@ -38,7 +38,7 @@ AlgebraOfGraphics = "0.7, 0.8"
 BSplineKit = "0.16, 0.17"
 CategoricalArrays = "0.10"
 ColorSchemes = "3"
-ColorTypes = "0.11"
+ColorTypes = "0.11, 0.12"
 Colors = "0.12"
 CoordinateTransformations = "0.6"
 DataFrames = "1"
