CompatHelper: bump compat for Colors to 0.13, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -39,7 +39,7 @@ BSplineKit = "0.16, 0.17"
 CategoricalArrays = "0.10"
 ColorSchemes = "3"
 ColorTypes = "0.11"
-Colors = "0.12"
+Colors = "0.12, 0.13"
 CoordinateTransformations = "0.6"
 DataFrames = "1"
 DataStructures = "0.18"
