--- a/Project.toml
+++ b/Project.toml
@@ -38,8 +38,8 @@ AlgebraOfGraphics = "0.7, 0.8"
 BSplineKit = "0.16, 0.17"
 CategoricalArrays = "0.10"
 ColorSchemes = "3"
-ColorTypes = "0.11"
-Colors = "0.12"
+ColorTypes = "0.11, 0.12"
+Colors = "0.12, 0.13"
 CoordinateTransformations = "0.6"
 DataFrames = "1"
 DataStructures = "0.18"
@@ -47,7 +47,7 @@ DocStringExtensions = "0.9"
 GeometryBasics = "0.4"
 GridLayoutBase = "0.9, 0.10, 0.11"
 ImageFiltering = "0.7"
-Interpolations = "0.14,0.15"
+Interpolations = "0.14, 0.15"
 LinearAlgebra = "1"
 Makie = "0.17, 0.18, 0.19, 0.20, 0.21"
 MakieThemes = "0.1"
