--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -30,3 +30,4 @@ XML2_jll = "02c8fc9c-b97f-50b9-bbe4-9be30ff0a78a"
 [compat]
 AlgebraOfGraphics = "0.7, 0.8"
 BSplineKit = "0.16, 0.17"
+Colors = "0.12, 0.13"
