--- a/Project.toml
+++ b/Project.toml
@@ -44,7 +44,7 @@ CoordinateTransformations = "0.6"
 DataFrames = "1"
 DataStructures = "0.18"
 DocStringExtensions = "0.9"
-GeometryBasics = "0.4"
+GeometryBasics = "0.4, 0.5"
 GridLayoutBase = "0.9, 0.10, 0.11"
 ImageFiltering = "0.7"
 Interpolations = "0.14, 0.15"
