--- a/Project.toml
+++ b/Project.toml
@@ -56,7 +56,7 @@ SparseArrays = "1"
 StaticArrays = "1"
 Statistics = "1"
 TopoPlots = "0.1, 0.2"
-Unfold = "0.6, 0.7"
+Unfold = "0.6, 0.7, 0.8"
 julia = "1"
 
 [extras]
