--- a/Project.toml
+++ b/Project.toml
@@ -49,7 +49,7 @@ GridLayoutBase = "0.9, 0.10, 0.11"
 ImageFiltering = "0.7"
 Interpolations = "0.14, 0.15"
 LinearAlgebra = "1"
-Makie = "0.17, 0.18, 0.19, 0.20, 0.21"
+Makie = "0.17, 0.18, 0.19, 0.20, 0.21, 0.22"
 MakieThemes = "0.1"
 PyMNE = "0.2"
 SparseArrays = "1"
