--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -12,14 +12,15 @@ DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 DataFramesMeta = "1313f7d8-7da2-5740-9ea0-a2ca25f37964"
 DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
-FFMPEG_jll = "b22a6f82-2f65-5046-a5b2-351ab43fb4e5"
 Glob = "c27321d9-0574-5035-807b-f59d2c89b15c"
 Literate = "98b081ad-f1c9-55d3-8b20-4c87d4299306"
+Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
 MakieThemes = "e296ed71-da82-5faf-88ab-0034a9761098"
 Observables = "510215fc-4207-5dde-b226-833fc4488ee2"
 PyMNE = "6c5003b2-cbe8-491c-a0d1-70088e6a0fd6"
 PythonPlot = "274fc56d-3b97-40fa-a1cd-1b4a50311bf9"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StatsModels = "3eaba693-59b7-5ba5-a881-562e759f1c8d"
 TopoPlots = "2bdbdf9c-dbd8-403f-947b-1a4e0dd41a7a"
@@ -29,6 +30,8 @@ UnfoldSim = "ed8ae6d2-84d3-44c6-ab46-0baf21700804"
 XML2_jll = "02c8fc9c-b97f-50b9-bbe4-9be30ff0a78a"
 
 [compat]
-AlgebraOfGraphics = "0.7, 0.8"
+AlgebraOfGraphics = "0.8"
 BSplineKit = "0.16, 0.17"
+CairoMakie = "0.11, 0.12, 0.13"
 Colors = "0.12, 0.13"
+Makie = "0.21, 0.22"
