--- a/Project.toml
+++ b/Project.toml
@@ -34,8 +34,8 @@ PyMNE = "6c5003b2-cbe8-491c-a0d1-70088e6a0fd6"
 UnfoldMakiePyMNEExt = "PyMNE"
 
 [compat]
-AlgebraOfGraphics = "0.7, 0.8"
-BSplineKit = "0.16, 0.17"
+AlgebraOfGraphics = "0.7, 0.8, 0.9"
+BSplineKit = "0.16, 0.17, 0.18"
 CategoricalArrays = "0.10"
 ColorSchemes = "3"
 ColorTypes = "0.11, 0.12"
