--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -30,7 +30,7 @@ XML2_jll = "02c8fc9c-b97f-50b9-bbe4-9be30ff0a78a"
 
 [compat]
 AlgebraOfGraphics = "0.8"
-BSplineKit = "0.16, 0.17"
+BSplineKit = "0.16, 0.17, 0.18"
 CairoMakie = "0.11, 0.12, 0.13"
 Colors = "0.12, 0.13"
 Makie = "0.21, 0.22"
