--- a/Project.toml
+++ b/Project.toml
@@ -21,6 +21,7 @@ Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
 MakieThemes = "e296ed71-da82-5faf-88ab-0034a9761098"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
@@ -53,6 +54,7 @@ LinearAlgebra = "1"
 Makie = "0.17, 0.18, 0.19, 0.20, 0.21, 0.22"
 MakieThemes = "0.1"
 PyMNE = "0.2"
+Random = "1.11.0"
 SparseArrays = "1"
 StaticArrays = "1"
 Statistics = "1"
