--- a/Project.toml
+++ b/Project.toml
@@ -37,7 +37,7 @@ UnfoldMakiePyMNEExt = "PyMNE"
 UnfoldMakieUnfoldSimExt = "UnfoldSim"
 
 [compat]
-AlgebraOfGraphics = "0.7, 0.8, 0.9"
+AlgebraOfGraphics = "0.7, 0.8, 0.9, 0.10"
 BSplineKit = "0.16, 0.17, 0.18"
 CategoricalArrays = "0.10"
 ColorSchemes = "3"
