--- a/Project.toml
+++ b/Project.toml
@@ -37,8 +37,8 @@ UnfoldMakiePyMNEExt = "PyMNE"
 UnfoldMakieUnfoldSimExt = "UnfoldSim"
 
 [compat]
-AlgebraOfGraphics = "0.7, 0.8, 0.9"
-BSplineKit = "0.16, 0.17, 0.18"
+AlgebraOfGraphics = "0.7, 0.8, 0.9, 0.10"
+BSplineKit = "0.16, 0.17, 0.18, 0.19"
 CategoricalArrays = "0.10"
 ColorSchemes = "3"
 ColorTypes = "0.11, 0.12"
