--- a/test/Project.toml
+++ b/test/Project.toml
@@ -14,6 +14,6 @@ UnfoldMakie = "69a5ce3b-64fb-4f22-ae69-36dd4416af2a"
 UnfoldSim = "ed8ae6d2-84d3-44c6-ab46-0baf21700804"
 
 [compat]
-AlgebraOfGraphics = "0.7, 0.8, 0.9"
+AlgebraOfGraphics = "0.7, 0.8, 0.9, 0.10"
 BSplineKit = "0.16, 0.17, 0.18"
 UnfoldSim = "0.4"
