--- a/Project.toml
+++ b/Project.toml
@@ -50,7 +50,7 @@ DocStringExtensions = "0.9"
 GeometryBasics = "0.4, 0.5"
 GridLayoutBase = "0.9, 0.10, 0.11"
 ImageFiltering = "0.7"
-Interpolations = "0.14, 0.15"
+Interpolations = "0.14, 0.15, 0.16"
 LinearAlgebra = "1"
 Makie = "0.17, 0.18, 0.19, 0.20, 0.21, 0.22"
 MakieThemes = "0.1"
