--- a/Project.toml
+++ b/Project.toml
@@ -45,7 +45,7 @@ ColorTypes = "0.11, 0.12"
 Colors = "0.12, 0.13"
 CoordinateTransformations = "0.6"
 DataFrames = "1"
-DataStructures = "0.18"
+DataStructures = "0.18, 0.19"
 DocStringExtensions = "0.9"
 GeometryBasics = "0.4, 0.5"
 GridLayoutBase = "0.9, 0.10, 0.11"
