--- a/.github/workflows/Docs.yml
+++ b/.github/workflows/Docs.yml
@@ -22,7 +22,7 @@ concurrency:
   # Skip intermediate builds: always.
   # Cancel intermediate builds: only if it is a pull request build.
   group: ${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: ${{ startsWith(github.ref, 'refs/pull/') }}
+  cancel-in-progress: false
 
 jobs:
   docs:
