test should run on every commit in PR

--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -2,9 +2,13 @@ name: Test
 
 on:
   push:
-    branches:
-      - main
+    branches: [main]
     tags: ["*"]
+  pull_request:
+    # run on any PR change (new commits, reopen, etc.)
+    types: [opened, synchronize, reopened, ready_for_review]
+    # choose which base branches should trigger
+    branches: ["main"]   # or ["**"] to allow any base
   workflow_dispatch:
 
 jobs:
