--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -34,5 +34,5 @@ AlgebraOfGraphics = "0.8, 0.9, 0.10"
 BSplineKit = "0.16, 0.17, 0.18, 0.19"
 CairoMakie = "0.11, 0.12, 0.13"
 Colors = "0.12, 0.13"
-Makie = "0.21, 0.22"
+Makie = "0.21, 0.22, 0.23, 0.24"
 UnfoldSim = "0.4"
