--- a/Project.toml
+++ b/Project.toml
@@ -61,7 +61,7 @@ StaticArrays = "1"
 Statistics = "1"
 TopoPlots = "0.1, 0.2"
 Unfold = "0.6, 0.7, 0.8"
-UnfoldSim = "0.4"
+UnfoldSim = "0.4, 0.5"
 julia = "1"
 
 [extras]
