--- a/.github/workflows/Docs.yml
+++ b/.github/workflows/Docs.yml
@@ -28,6 +28,8 @@ jobs:
   docs:
     name: Documentation
     runs-on: ubuntu-latest
+    env:
+      JULIA_CONDAPKG_BACKEND: MicroMamba
     steps:
       - uses: actions/checkout@v4
       - uses: julia-actions/setup-julia@v2
