--- a/Project.toml
+++ b/Project.toml
@@ -59,7 +59,7 @@ Random = "1"
 SparseArrays = "1"
 StaticArrays = "1"
 Statistics = "1"
-TopoPlots = "0.1, 0.2"
+TopoPlots = "0.1, 0.2, 0.3"
 Unfold = "0.6, 0.7, 0.8"
 UnfoldSim = "0.4, 0.5"
 julia = "1"
